--- a/src/App.css
+++ b/src/App.css
@@ -184,11 +184,17 @@ li{
   float: left;
   background-color: #CFD2CD;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .recommendations-overlay{
-  position: absolute;  
+  position: absolute;    
   z-index: 10;
+}
+
+.similar-movie:hover{
+  cursor: pointer;
+  opacity: 0.55;
 }
 /*
 *
